# ComputerGraphics

./: CMakeLists.txt  Makefile  main.cpp
Models/: Model.cpp  Model.h
Primitives/: Geometry.h  IntPoint.h  Line.h  Triangle.h
TgaImage/: TgaImage.cpp  TgaImage.h
